# pka-dashboard

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
app/: config.py  main.py
app/routes/: archive.py  drafts.py  edit_comments.py  edit_review.py  edit_review_response.py  edit_todo.py  needs_attention.py  today.py
app/services/: audit_log.py  csrf.py  file_writer.py  notes.py
app/static/: manifest.json  style.css  sw.js  todo.js
app/templates/: _today_body.html  archive.html  base.html  drafts.html  needs_attention.html  today.html
tests/: conftest.py  test_auto_commit.py  test_csrf.py  test_edit_review_response_route.py  test_file_writer.py  test_flush_saving.py  test_today_resolver.py
